scribble-test/src/test/resources/good/syntax/inlinedunfolding/grecursion/Test04.scr
module good.syntax.inlinedunfolding.grecursion.Test04;


global protocol Proto4(role A, role B)
{
	choice at A
	{
		rec X
		{
			choice at A
			{
				1() from A to B;
				continue X;
			}
			or
			{
				2() from A to B;
				continue X;
			}
		}
	}
}


